// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/UOCTET.proto";


package pusGroundModel.protobuf;

message Pus012MonitoringCheckProperties {
extensions 18 to 118;

  optional ccsds_mal.protobuf.UOCTET ridStatus = 1;
  optional ccsds_mal.protobuf.UOCTET actionStatus = 2;
  optional ccsds_mal.protobuf.STRING value = 3;
  optional ccsds_mal.protobuf.UINTEGER rid = 4;
  optional ccsds_mal.protobuf.STRING mask = 5;
  optional ccsds_mal.protobuf.STRING actionName = 6;
  optional ccsds_mal.protobuf.STRING ridLabel = 7;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeRid = 8;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeRid = 9;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeActionStatus = 10;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeActionStatus = 11;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeRidStatus = 12;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeRidStatus = 13;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeMask = 14;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeMask = 15;
  optional ccsds_mal.protobuf.UOCTET lastUpdateModeValue = 16;
  optional ccsds_mal.protobuf.TIME lastUpdateTimeValue = 17;
}
